--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,14 +10,14 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#712cf9">
 
-    <title>Projeto - Teste de Software{% block title %}{% endblock %}</title>
+    <title>MyFinances - Gerenciador financeiro {% block title %}{% endblock %}</title>
     <!-- Custom styles for this template -->
     <link href="{% static 'css/offcanvas.css' %}" rel="stylesheet">
 </head>
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> Projeto</a>
+                <a class="navbar-brand" href="{% url 'minhas_despesas' %}"> MyFinances</a>
                 <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,7 +25,32 @@
                 <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Dashboard</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: white;" href="#" data-bs-toggle="dropdown" aria-expanded="false">Renda</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="dropdown-item" href="{% url 'listagem_renda' %}">Minha Renda</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'estatistica_renda' %}">Estatísticas de renda</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown"">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">Despesas</a>
+                            <ul class="dropdown-menu" >
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'minhas_despesas' %}">Minhas Despesas</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'listagem_categorias' %}">Categorias</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'estatistica' %}">Estatísticas de despesas</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <form class="d-flex" action="{% url 'logout' %}" method="POST">
