--- a/main/templates/base_authentication.html
+++ b/main/templates/base_authentication.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Projeto - Teste de Software {% block title %}{% endblock %}</title>
+    <title>FMS - Gerenciador financeiro {% block title %}{% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css '%}" rel="stylesheet">
     <link href="{% static 'css/style.css '%}" rel="stylesheet">
@@ -17,7 +17,7 @@
   <body class="bg-light"> 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> Projeto</a>
+            <a class="navbar-brand" href="#"> MyFinances</a>
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
