--- a/main/templates/despesas/listagem_categorias.html
+++ b/main/templates/despesas/listagem_categorias.html
@@ -13,7 +13,7 @@
             </div>
         
             <div class="col-md-2">
-                <a href="{% url 'add_categoria' %}" class="btn btn-primary btn-sm">Adicionar Categoria</a>
+                <a href="{% url 'add_categoria' %}" id="add_categoria" class="btn btn-primary btn-sm">Adicionar Categoria</a>
             </div>
         </div>
     </div>
