--- a/main/templates/despesas/minhas_despesas.html
+++ b/main/templates/despesas/minhas_despesas.html
@@ -14,7 +14,7 @@
             </div>
         
             <div class="col-md-2">
-                <a href="{% url 'add_despesa' %}" class="btn btn-primary">Adicionar Despesa</a>
+                <a href="{% url 'add_despesa' %}" id="add_despesa" class="btn btn-primary">Adicionar Despesa</a>
             </div>
         </div>
     </div>
