--- a/main/templates/auth/cadastro.html
+++ b/main/templates/auth/cadastro.html
@@ -39,7 +39,7 @@
                         <small style="float: right; cursor: pointer;" class="exibeSenha">Mostrar senha</small>
                     </div>
 
-                    <input type="submit" value="Cadastrar" class="submit-btn btn btn btn-secondary btn-lg btn-block w-100 mt-4" action="{% url 'login' %}"/>
+                    <input type="submit" value="Cadastrar" id="btn-submit" class="submit-btn btn btn btn-secondary btn-lg btn-block w-100 mt-4" action="{% url 'login' %}"/>
                     <p class="mt-2 mb-3 text-muted" style="text-align: center;">&copy;ProjetoTS 2022</p>
                 </form>
             </div>
