--- a/main/templates/despesas/add_categoria.html
+++ b/main/templates/despesas/add_categoria.html
@@ -14,7 +14,7 @@
             <form method="post">
                 {% csrf_token %}
                 {{form | crispy}}
-                <button type="submit" class="btn btn-success mt-3">Criar categoria</button>
+                <button type="submit" id="submit" class="btn btn-success mt-3">Criar categoria</button>
             </form>    
         </div>
     </div>
