--- a/main/templates/despesas/add_despesa.html
+++ b/main/templates/despesas/add_despesa.html
@@ -39,7 +39,7 @@
                     <input type="date" name="data" class="form-control form-control-sm">
                 </div>
 
-                <input type="submit" value="Lançar despesa" class="btn btn-primary mt-4 btn-primary-sm">
+                <input type="submit" id="submit" value="Lançar despesa" class="btn btn-primary mt-4 btn-primary-sm">
             </form>    
         </div>
     </div>
