--- a/main/templates/rendas/add_renda.html
+++ b/main/templates/rendas/add_renda.html
@@ -32,7 +32,7 @@
                     <input type="date" name="data" class="form-control form-control-sm" value="{{val.data}}" id=""required>
                 </div>
 
-                <input type="submit" value="Lançar renda" class="btn btn-primary mt-4 btn-primary-sm">
+                <input type="submit" id="submit" value="Lançar renda" class="btn btn-primary mt-4 btn-primary-sm">
             </form>    
         </div>
     </div>
