--- a/main/templates/rendas/listagem_renda.html
+++ b/main/templates/rendas/listagem_renda.html
@@ -14,7 +14,7 @@
             </div>
         
             <div class="col-md-2">
-                <a href="{% url 'add_renda' %}" class="btn btn-primary">Adicionar Renda</a>
+                <a href="{% url 'add_renda' %}" id="add_renda" class="btn btn-primary">Adicionar Renda</a>
             </div>
         </div>
     </div>
